<resources>
    <string name="app_name">Batua</string>
    <string name="app_description">Batua Android Project</string>
    <string name="action_settings">Settings</string>
    <string name="logout_title">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_email">Email or mobile number</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="google_login">Login with Google+</string>
    <string name="mobile_number">Enter mobile number</string>
    <string name="otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_pin">Enter new PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="add_merchant_title">Add Merchant</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="merchant_short_code">Merchant Short Code</string>
    <string name="merchant_email">Merchant Email</string>
    <string name="merchant_email_title">Email : </string>
    <string name="merchant_mobile">Merchant Mobile</string>
    <string name="merchant_category">Merchant Category</string>
    <string name="merchant_fee">Merchant Fee (in %)</string>
    <string name="merchant_address">Address</string>
    <string name="merchant_pin_code">Pin</string>
    <string name="account_holder_name">Account holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="merchant_city">City</string>
    <string name="merchant_bank">Bank</string>
    <string name="edit_merchant_title">Edit Merchant</string>
    <string name="leader_board_title">Leader Board</string>
    <string name="profile_title">Profile</string>
    <string name="merchant_current_password">Current Password</string>
    <string name="merchant_new_password">New Password</string>
    <string name="merchant_confirm_password">Confirm Password</string>
    <string name="save_title">SAVE</string>
    <string name="fb_login">Login with facebook</string>
    <string name="hint_only_email">Email(optional)</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="fb_signup">Sign-Up with facebook</string>
    <string name="google_signup">Sign-Up with Google+</string>
    <string name="search_merchant_hint">Search Merchant</string>
    <!--<string name="amount">\u20B9 2000.00</string>-->
    <string name="confirmation">Confirmation</string>
    <string name="text_balance">Bal : <b>\u20B9 </b></string>
    <string name="my_wallet">My Wallet</string>
    <string name="transaction_history">Transaction History</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="refer_the_app">Refer the app</string>
    <string name="wallet">Wallet</string>
    <string name="Promocode">Enter Promo Code</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="amount">2000.00</string>
    <string name="order_num_title">Order No. :</string>
    <string name="available_bal">Available Balance : </string>
    <string name="cash_back_title">Cashback recieved against </string>
    <string name="card_number">Card Number</string>
    <string name="logout_bold_title">LOGOUT</string>
    <string name="update_title">UPDATE</string>
    <string name="merchant_current_pin">Current PIN</string>
    <string name="merchant_new_pin">New PIN</string>
    <string name="merchant_confirm_pin">Confirm PIN</string>
    <string name="transaction_recieved_title">Payment received against</string>
    <string name="transaction_number_title">Transaction Id :</string>
    <string name="transaction_history_title">Transaction History</string>
    <string name="make_another_payment">Make Another Payment</string>
    <string name="query">Query</string>
    <string name="submit">Submit</string>
    <string name="error_msg_transaction">Sorry, your transaction could not be completed</string>
    <string name="text_wallet_balance">Balance : \u20B9</string>
    <string name="forgot_pin">Forgot PIN?</string>

    <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


    <string-array name="merchant_category">
        <item>@string/merchant_category</item>
    </string-array>

    <string-array name="merchant_city">
        <item>@string/merchant_city</item>
    </string-array>

    <string-array name="merchant_bank">
        <item>Select Bank</item>
        <item>HDFC Bank</item>
        <item>ICICI Bank</item>
        <item>SBI Bank</item>
        <item>Axis Bank</item>
    </string-array>

    //facebook id
    <string name="facebook_app_id">1619016125090093</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="gcm_projectnumber">348607505068</string>

</resources>
