<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/wallet"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_wallet"
            android:title="@string/wallet"
            android:actionLayout="@layout/my_wallet_layout"
            android:icon="@drawable/card_icon_drawer" />

        <item
            android:id="@+id/nav_transaction_history"
            android:icon="@drawable/tran_hist_ico_drawer"
            android:title="@string/transaction_history" />

    </group>

    <group
        android:id="@+id/contact"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/message_icon_drawer"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/star_half_drawer"
            android:title="@string/rate_the_app" />

        <item
            android:id="@+id/nav_refer_app"
            android:icon="@drawable/share_alt_drawer"
            android:title="@string/refer_the_app" />

    </group>

</menu>