<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scroll_view"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text_size_16">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:theme="@style/TextLabel"
            app:errorTextAppearance="@style/error_appearance">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_16"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_email"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_16"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_below="@+id/input_layout_password"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/sky_blue"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_below="@+id/txt_forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/bg_button_pink"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/layout_social_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_button_fb"
                android:text="@string/fb_login"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_gplus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/bg_button_gplus"
                android:text="@string/google_login"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>