<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp">

    <RelativeLayout
        android:id="@+id/cash_back_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/cash_back_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_back_title"/>

        <TextView
            android:id="@+id/txt_cash_back_against"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingLeft="3dp"
            android:layout_toRightOf="@id/cash_back_title"/>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rupee_symbol"
            android:textSize="@dimen/text_size_18"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee_symbol"/>

        <TextView
            android:id="@+id/txt_amount_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:paddingLeft="2dp"
            android:textSize="@dimen/text_size_18"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/rupee_symbol"
            android:layout_toEndOf="@+id/rupee_symbol" />

        <TextView
            android:id="@+id/txt_payment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15/03/2016"
            android:textSize="@dimen/text_size_14"
            android:layout_alignParentRight="true"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/order_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_num_title"
            android:textSize="@dimen/text_size_14"/>

        <TextView
            android:id="@+id/txt_order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8970653762534"
            android:paddingLeft="2dp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/text_size_14"
            android:layout_toRightOf="@+id/order_number_title"
            android:layout_toEndOf="@+id/order_number_title" />

        <TextView
            android:id="@+id/txt_card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Credit / Debit Card"
            android:textSize="@dimen/text_size_14"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"/>

</LinearLayout>