<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/tool_bar_blue"
        app:titleTextAppearance="?attr/titleTextAppearance"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetStart="0dp"
        android:contentInsetLeft="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/toolbar_title_font_size"
            android:text="@string/wallet"
            android:textColor="@color/white"
            android:id="@+id/toolbar_title"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal"
        android:id="@+id/wallet_balance_layout"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:elevation="@dimen/elevation_depth">

        <TextView
            android:id="@+id/amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_bal"
            android:textSize="@dimen/text_size_18"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/rupee_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee_symbol"
            android:textSize="@dimen/text_size_18"
            android:textColor="@android:color/black"
            android:layout_toRightOf="@id/amount_title"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"/>

        <TextView
            android:id="@+id/txt_balance_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textStyle="bold"
            android:paddingLeft="3dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_18"
            android:layout_toRightOf="@id/rupee_symbol"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Add+"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_size_18"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>


    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/wallet_transactions_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        app:tabGravity="fill"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/wallet_balance_layout"
        app:tabIndicatorColor="@color/sky_blue"
        app:tabSelectedTextColor="@color/sky_blue"
        app:tabTextAppearance="@style/wallet_tab_layout_font_style"
        app:tabTextColor="@color/sky_blue_light"
        android:elevation="@dimen/elevation_depth"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/wallet_transactions_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/wallet_transactions_tab_layout"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="1dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:elevation="@dimen/elevation_depth"/>

</RelativeLayout>