<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.activity.LoginActivity">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/img_batua_icon_text"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:layout_marginTop="30dp"
            android:theme="@style/TextLabel"
            app:errorTextAppearance="@style/error_appearance">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="14sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_email"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="14sp"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/input_layout_password"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue_dark"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:layout_below="@+id/txt_forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_button_pink"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/layout_social_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_gplus"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_button_gplus"
            android:text="@string/google_login"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>